bad/new_array_invalid_size_type_null.example_compiler_output
ERROR
[1mbad/new_array_invalid_size_type_null.lat:3:20: [1;31merror: [0;1marray size has to be of type `int`, not `null`[m
	int[] x = new int[null];
	                  [1;32m^[m
